fix menu off center

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 
 .header-items {
  display: inline-block;
- padding: 0 auto;
+ padding: 0;
  margin: 0 auto;
 }
 
